# GZEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  build_cmake.bat  premake5.lua  temp_compile_shader.bat  temp_compile_shader.sh
GZEditor/: CMakeLists.txt  HelloWorld.json  Simple.json  imgui.ini
GZEditor/EditorHotReload/: CMakeLists.txt  EditorHotReload.cpp
GZEditor/HotReloadTest/: CMakeLists.txt  gz_guest.cpp
GZEditor/asset/model/: SD_Anime_Character_Char.mtl  meng_yuan.mtl
GZEditor/asset/shader/: basic.frag  basic.vert  basic_frag.spv  basic_vert.spv
GZEditor/src/: App.cpp  EditorApp.cpp  EditorApp.h  main.cpp
GZEngine/: CMakeLists.txt  GZ_Include.h
GZEngine/include/: GZ_Include.h
GZEngine/src/: App.cpp  App.h  Core.h  EntryPoint.h  Entry_Point.h  GZApp.cpp  GZApp.h  defines.h  gzpch.cpp  gzpch.h  test.cpp  test.h
GZEngine/src/Common/: CommonModule.cpp  CommonModule.h
GZEngine/src/Core/: App.cpp  App.h  ComponentInterface.h  ECSCommonComponent.h  FileUtil.cpp  FileUtil.h  ImGuiUtil.h  Input.cpp  Input.h  Log.cpp  Log.h  LogCommonFormatter.h  MathUtil.h  Module.cpp  Module.h  Profiler.cpp  Profiler.h  Scancode.h  SceneModule.cpp  SceneModule.h  TimerModule.cpp  TimerModule.h  TransformModule.cpp  TransformModule.h
GZEngine/src/Game/: CharacterModule.h  GameModule.cpp  GameModule.h
GZEngine/src/Mesh/: Mesh.cpp  Mesh.h
GZEngine/src/Physics/: PhysicsModule.cpp  PhysicsModule.h
GZEngine/src/Renderer/: RenderModule.cpp  RenderModule.h  Renderer.cpp  Renderer.h  vk_mem_alloc.cpp
Misc/: Misc_Learning.txt
